# core-supply

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: pr.yml
core/clients/: apps.py  urls.py  views.py
core/clients/filter/: filter_data.py
core/clients/pagination/: custom_pagination.py
core/clients/service/: client_data_processor.py  csv_loader.py  json_loader.py  phone_formatter.py  region_mapper.py  type_classifier.py
core/clients/tests/: test_rest_api_csv.py  test_rest_api_json.py
core/project/: settings.py  urls.py
scripts/: validate.sh
tests/: test_rest_api.py
